PA5-6-7/src/parser.output
Terminals unused in grammar

   ERROR


State 348 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 function_definition: declarator compound_statement
    6                    | declarator declaration_list compound_statement
    7                    | declaration_specifiers declarator compound_statement
    8                    | declaration_specifiers declarator declaration_list compound_statement

    9 declaration: declaration_specifiers SEMICOLON
   10            | declaration_specifiers init_declarator_list SEMICOLON

   11 declaration_list: declaration
   12                 | declaration_list declaration

   13 declaration_specifiers: storage_class_specifier
   14                       | storage_class_specifier declaration_specifiers
   15                       | type_specifier
   16                       | type_specifier declaration_specifiers
   17                       | type_qualifier
   18                       | type_qualifier declaration_specifiers

   19 storage_class_specifier: AUTO
   20                        | REGISTER
   21                        | STATIC
   22                        | EXTERN
   23                        | TYPEDEF

   24 type_specifier: VOID
   25               | CHAR
   26               | SHORT
   27               | INT
   28               | LONG
   29               | FLOAT
   30               | DOUBLE
   31               | SIGNED
   32               | UNSIGNED
   33               | struct_or_union_specifier
   34               | enum_specifier
   35               | TYPEDEF_NAME

   36 type_qualifier: CONST
   37               | VOLATILE

   38 struct_or_union_specifier: struct_or_union identifier OBRACE struct_declaration_list CBRACE
   39                          | struct_or_union OBRACE struct_declaration_list CBRACE
   40                          | struct_or_union identifier

   41 struct_or_union: STRUCT
   42                | UNION

   43 struct_declaration_list: struct_declaration
   44                        | struct_declaration_list struct_declaration

   45 init_declarator_list: init_declarator
   46                     | init_declarator_list COMMA init_declarator

   47 init_declarator: declarator
   48                | declarator ASSIGN initializer

   49 struct_declaration: specifier_qualifier_list struct_declarator_list SEMICOLON

   50 specifier_qualifier_list: type_specifier
   51                         | type_specifier specifier_qualifier_list
   52                         | type_qualifier
   53                         | type_qualifier specifier_qualifier_list

   54 struct_declarator_list: struct_declarator
   55                       | struct_declarator_list COMMA struct_declarator

   56 struct_declarator: declarator
   57                  | COLON constant_expression
   58                  | declarator COLON constant_expression

   59 enum_specifier: ENUM OBRACE enumerator_list CBRACE
   60               | ENUM identifier OBRACE enumerator_list CBRACE
   61               | ENUM identifier

   62 enumerator_list: enumerator
   63                | enumerator_list COMMA enumerator

   64 enumerator: identifier
   65           | identifier ASSIGN constant_expression

   66 declarator: direct_declarator
   67           | pointer direct_declarator

   68 direct_declarator: identifier
   69                  | OPAREN declarator CPAREN
   70                  | direct_declarator OBRACKET CBRACKET
   71                  | direct_declarator OBRACKET constant_expression CBRACKET
   72                  | direct_declarator OPAREN CPAREN
   73                  | direct_declarator OPAREN parameter_type_list CPAREN
   74                  | direct_declarator OPAREN identifier_list CPAREN

   75 pointer: STAR
   76        | STAR type_qualifier_list
   77        | STAR pointer
   78        | STAR type_qualifier_list pointer

   79 type_qualifier_list: type_qualifier
   80                    | type_qualifier_list type_qualifier

   81 parameter_type_list: parameter_list
   82                    | parameter_list COMMA ELLIPSIS

   83 parameter_list: parameter_declaration
   84               | parameter_list COMMA parameter_declaration

   85 parameter_declaration: declaration_specifiers declarator
   86                      | declaration_specifiers
   87                      | declaration_specifiers abstract_declarator

   88 identifier_list: identifier
   89                | identifier_list COMMA identifier

   90 initializer: assignment_expression
   91            | OBRACE initializer_list CBRACE
   92            | OBRACE initializer_list COMMA CBRACE

   93 initializer_list: initializer
   94                 | initializer_list COMMA initializer

   95 type_name: specifier_qualifier_list
   96          | specifier_qualifier_list abstract_declarator

   97 abstract_declarator: pointer
   98                    | direct_abstract_declarator
   99                    | pointer direct_abstract_declarator

  100 direct_abstract_declarator: OPAREN abstract_declarator CPAREN
  101                           | OBRACKET CBRACKET
  102                           | OBRACKET constant_expression CBRACKET
  103                           | direct_abstract_declarator OBRACKET CBRACKET
  104                           | direct_abstract_declarator OBRACKET constant_expression CBRACKET
  105                           | OPAREN CPAREN
  106                           | OPAREN parameter_type_list CPAREN
  107                           | direct_abstract_declarator OPAREN CPAREN
  108                           | direct_abstract_declarator OPAREN parameter_type_list CPAREN

  109 statement: labeled_statement
  110          | compound_statement
  111          | expression_statement
  112          | selection_statement
  113          | iteration_statement
  114          | jump_statement

  115 labeled_statement: identifier COLON statement
  116                  | CASE constant_expression COLON statement
  117                  | DEFAULT COLON statement

  118 expression_statement: SEMICOLON
  119                     | expression SEMICOLON

  120 compound_statement: OBRACE CBRACE
  121                   | OBRACE statement_list CBRACE
  122                   | OBRACE declaration_list CBRACE
  123                   | OBRACE declaration_list statement_list CBRACE

  124 statement_list: statement
  125               | statement_list statement

  126 selection_statement: IF OPAREN expression CPAREN statement
  127                    | IF OPAREN expression CPAREN statement ELSE statement
  128                    | SWITCH OPAREN expression CPAREN statement

  129 iteration_statement: WHILE OPAREN expression CPAREN statement
  130                    | DO statement WHILE OPAREN expression CPAREN SEMICOLON
  131                    | FOR OPAREN SEMICOLON SEMICOLON CPAREN statement
  132                    | FOR OPAREN SEMICOLON SEMICOLON expression CPAREN statement
  133                    | FOR OPAREN SEMICOLON expression SEMICOLON CPAREN statement
  134                    | FOR OPAREN SEMICOLON expression SEMICOLON expression CPAREN statement
  135                    | FOR OPAREN expression SEMICOLON SEMICOLON CPAREN statement
  136                    | FOR OPAREN expression SEMICOLON SEMICOLON expression CPAREN statement
  137                    | FOR OPAREN expression SEMICOLON expression SEMICOLON CPAREN statement
  138                    | FOR OPAREN expression SEMICOLON expression SEMICOLON expression CPAREN statement

  139 jump_statement: GOTO identifier SEMICOLON
  140               | CONTINUE SEMICOLON
  141               | BREAK SEMICOLON
  142               | RETURN SEMICOLON
  143               | RETURN expression SEMICOLON

  144 expression: assignment_expression
  145           | expression COMMA assignment_expression

  146 assignment_expression: conditional_expression
  147                      | unary_expression assignment_operator assignment_expression

  148 assignment_operator: ASSIGN
  149                    | MUL_ASSIGN
  150                    | DIV_ASSIGN
  151                    | MOD_ASSIGN
  152                    | ADD_ASSIGN
  153                    | SUB_ASSIGN
  154                    | B_SL_ASSIGN
  155                    | B_SR_ASSIGN
  156                    | B_AND_ASSIGN
  157                    | B_XOR_ASSIGN
  158                    | B_OR_ASSIGN

  159 conditional_expression: logical_or_expression
  160                       | logical_or_expression QUESTION expression COLON conditional_expression

  161 constant_expression: conditional_expression

  162 logical_or_expression: logical_and_expression
  163                      | logical_or_expression L_OR logical_and_expression

  164 logical_and_expression: inclusive_or_expression
  165                       | logical_and_expression L_AND inclusive_or_expression

  166 inclusive_or_expression: exclusive_or_expression
  167                        | inclusive_or_expression B_OR exclusive_or_expression

  168 exclusive_or_expression: and_expression
  169                        | exclusive_or_expression B_XOR and_expression

  170 and_expression: equality_expression
  171               | and_expression AMPERSAND equality_expression

  172 equality_expression: relational_expression
  173                    | equality_expression EQ_OP relational_expression
  174                    | equality_expression NE_OP relational_expression

  175 relational_expression: shift_expression
  176                      | relational_expression LT_OP shift_expression
  177                      | relational_expression GT_OP shift_expression
  178                      | relational_expression LE_OP shift_expression
  179                      | relational_expression GE_OP shift_expression

  180 shift_expression: additive_expression
  181                 | shift_expression B_SL additive_expression
  182                 | shift_expression B_SR additive_expression

  183 additive_expression: multiplicative_expression
  184                    | additive_expression ADD multiplicative_expression
  185                    | additive_expression SUB multiplicative_expression

  186 multiplicative_expression: cast_expression
  187                          | multiplicative_expression STAR cast_expression
  188                          | multiplicative_expression DIV cast_expression
  189                          | multiplicative_expression MOD cast_expression

  190 cast_expression: unary_expression
  191                | OPAREN type_name CPAREN cast_expression

  192 unary_expression: postfix_expression
  193                 | INC_OP unary_expression
  194                 | DEC_OP unary_expression
  195                 | unary_operator cast_expression
  196                 | SIZEOF unary_expression
  197                 | SIZEOF OPAREN type_name CPAREN

  198 unary_operator: AMPERSAND
  199               | STAR
  200               | ADD
  201               | SUB
  202               | B_NOT
  203               | L_NOT

  204 postfix_expression: primary_expression
  205                   | postfix_expression OBRACKET expression CBRACKET
  206                   | postfix_expression OPAREN CPAREN
  207                   | postfix_expression OPAREN argument_expression_list CPAREN
  208                   | postfix_expression PERIOD identifier
  209                   | postfix_expression ARROW identifier
  210                   | postfix_expression INC_OP
  211                   | postfix_expression DEC_OP

  212 primary_expression: identifier
  213                   | constant
  214                   | string
  215                   | OPAREN expression CPAREN

  216 argument_expression_list: assignment_expression
  217                         | argument_expression_list COMMA assignment_expression

  218 constant: INTEGER_CONSTANT
  219         | CHARACTER_CONSTANT
  220         | FLOATING_CONSTANT
  221         | ENUMERATION_CONSTANT

  222 string: STRING_LITERAL

  223 identifier: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
AUTO (258) 19
BREAK (259) 141
CASE (260) 116
CHAR (261) 25
CONST (262) 36
CONTINUE (263) 140
DEFAULT (264) 117
DO (265) 130
DOUBLE (266) 30
ELLIPSIS (267) 82
ELSE (268) 127
ENUM (269) 59 60 61
EXTERN (270) 22
FLOAT (271) 29
FOR (272) 131 132 133 134 135 136 137 138
GOTO (273) 139
IF (274) 126 127
INT (275) 27
LONG (276) 28
REGISTER (277) 20
RETURN (278) 142 143
SHORT (279) 26
SIGNED (280) 31
SIZEOF (281) 196 197
STATIC (282) 21
STRUCT (283) 41
SWITCH (284) 128
TYPEDEF (285) 23
UNION (286) 42
UNSIGNED (287) 32
VOID (288) 24
VOLATILE (289) 37
WHILE (290) 129 130
AMPERSAND (291) 171 198
ARROW (292) 209
ASSIGN (293) 48 65 148
COMMA (294) 46 55 63 82 84 89 92 94 145 217
PERIOD (295) 208
SEMICOLON (296) 9 10 49 118 119 130 131 132 133 134 135 136 137 138
    139 140 141 142 143
STAR (297) 75 76 77 78 187 199
OBRACE (298) 38 39 59 60 91 92 120 121 122 123
CBRACE (299) 38 39 59 60 91 92 120 121 122 123
OBRACKET (300) 70 71 101 102 103 104 205
CBRACKET (301) 70 71 101 102 103 104 205
OPAREN (302) 69 72 73 74 100 105 106 107 108 126 127 128 129 130 131
    132 133 134 135 136 137 138 191 197 206 207 215
CPAREN (303) 69 72 73 74 100 105 106 107 108 126 127 128 129 130 131
    132 133 134 135 136 137 138 191 197 206 207 215
QUESTION (304) 160
COLON (305) 57 58 115 116 117 160
ADD (306) 184 200
SUB (307) 185 201
DIV (308) 188
MOD (309) 189
INC_OP (310) 193 210
DEC_OP (311) 194 211
ADD_ASSIGN (312) 152
SUB_ASSIGN (313) 153
MUL_ASSIGN (314) 149
DIV_ASSIGN (315) 150
MOD_ASSIGN (316) 151
L_AND (317) 165
L_OR (318) 163
L_NOT (319) 203
EQ_OP (320) 173
NE_OP (321) 174
GT_OP (322) 177
LT_OP (323) 176
GE_OP (324) 179
LE_OP (325) 178
B_NOT (326) 202
B_OR (327) 167
B_XOR (328) 169
B_SL (329) 181
B_SR (330) 182
B_AND_ASSIGN (331) 156
B_OR_ASSIGN (332) 158
B_XOR_ASSIGN (333) 157
B_SL_ASSIGN (334) 154
B_SR_ASSIGN (335) 155
CHARACTER_CONSTANT (336) 219
ENUMERATION_CONSTANT (337) 221
FLOATING_CONSTANT (338) 220
INTEGER_CONSTANT (339) 218
STRING_LITERAL (340) 222
TYPEDEF_NAME (341) 35
IDENTIFIER (342) 223
ERROR (343)


Nonterminals, with rules where they appear

$accept (89)
    on left: 0
translation_unit (90)
    on left: 1 2, on right: 0 2
external_declaration (91)
    on left: 3 4, on right: 1 2
function_definition (92)
    on left: 5 6 7 8, on right: 3
declaration (93)
    on left: 9 10, on right: 4 11 12
declaration_list (94)
    on left: 11 12, on right: 6 8 12 122 123
declaration_specifiers (95)
    on left: 13 14 15 16 17 18, on right: 7 8 9 10 14 16 18 85 86 87
storage_class_specifier (96)
    on left: 19 20 21 22 23, on right: 13 14
type_specifier (97)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35, on right: 15 16 50
    51
type_qualifier (98)
    on left: 36 37, on right: 17 18 52 53 79 80
struct_or_union_specifier (99)
    on left: 38 39 40, on right: 33
struct_or_union (100)
    on left: 41 42, on right: 38 39 40
struct_declaration_list (101)
    on left: 43 44, on right: 38 39 44
init_declarator_list (102)
    on left: 45 46, on right: 10 46
init_declarator (103)
    on left: 47 48, on right: 45 46
struct_declaration (104)
    on left: 49, on right: 43 44
specifier_qualifier_list (105)
    on left: 50 51 52 53, on right: 49 51 53 95 96
struct_declarator_list (106)
    on left: 54 55, on right: 49 55
struct_declarator (107)
    on left: 56 57 58, on right: 54 55
enum_specifier (108)
    on left: 59 60 61, on right: 34
enumerator_list (109)
    on left: 62 63, on right: 59 60 63
enumerator (110)
    on left: 64 65, on right: 62 63
declarator (111)
    on left: 66 67, on right: 5 6 7 8 47 48 56 58 69 85
direct_declarator (112)
    on left: 68 69 70 71 72 73 74, on right: 66 67 70 71 72 73 74
pointer (113)
    on left: 75 76 77 78, on right: 67 77 78 97 99
type_qualifier_list (114)
    on left: 79 80, on right: 76 78 80
parameter_type_list (115)
    on left: 81 82, on right: 73 106 108
parameter_list (116)
    on left: 83 84, on right: 81 82 84
parameter_declaration (117)
    on left: 85 86 87, on right: 83 84
identifier_list (118)
    on left: 88 89, on right: 74 89
initializer (119)
    on left: 90 91 92, on right: 48 93 94
initializer_list (120)
    on left: 93 94, on right: 91 92 94
type_name (121)
    on left: 95 96, on right: 191 197
abstract_declarator (122)
    on left: 97 98 99, on right: 87 96 100
direct_abstract_declarator (123)
    on left: 100 101 102 103 104 105 106 107 108, on right: 98 99 103
    104 107 108
statement (124)
    on left: 109 110 111 112 113 114, on right: 115 116 117 124 125
    126 127 128 129 130 131 132 133 134 135 136 137 138
labeled_statement (125)
    on left: 115 116 117, on right: 109
expression_statement (126)
    on left: 118 119, on right: 111
compound_statement (127)
    on left: 120 121 122 123, on right: 5 6 7 8 110
statement_list (128)
    on left: 124 125, on right: 121 123 125
selection_statement (129)
    on left: 126 127 128, on right: 112
iteration_statement (130)
    on left: 129 130 131 132 133 134 135 136 137 138, on right: 113
jump_statement (131)
    on left: 139 140 141 142 143, on right: 114
expression (132)
    on left: 144 145, on right: 119 126 127 128 129 130 132 133 134
    135 136 137 138 143 145 160 205 215
assignment_expression (133)
    on left: 146 147, on right: 90 144 145 147 216 217
assignment_operator (134)
    on left: 148 149 150 151 152 153 154 155 156 157 158, on right:
    147
conditional_expression (135)
    on left: 159 160, on right: 146 160 161
constant_expression (136)
    on left: 161, on right: 57 58 65 71 102 104 116
logical_or_expression (137)
    on left: 162 163, on right: 159 160 163
logical_and_expression (138)
    on left: 164 165, on right: 162 163 165
inclusive_or_expression (139)
    on left: 166 167, on right: 164 165 167
exclusive_or_expression (140)
    on left: 168 169, on right: 166 167 169
and_expression (141)
    on left: 170 171, on right: 168 169 171
equality_expression (142)
    on left: 172 173 174, on right: 170 171 173 174
relational_expression (143)
    on left: 175 176 177 178 179, on right: 172 173 174 176 177 178
    179
shift_expression (144)
    on left: 180 181 182, on right: 175 176 177 178 179 181 182
additive_expression (145)
    on left: 183 184 185, on right: 180 181 182 184 185
multiplicative_expression (146)
    on left: 186 187 188 189, on right: 183 184 185 187 188 189
cast_expression (147)
    on left: 190 191, on right: 186 187 188 189 191 195
unary_expression (148)
    on left: 192 193 194 195 196 197, on right: 147 190 193 194 196
unary_operator (149)
    on left: 198 199 200 201 202 203, on right: 195
postfix_expression (150)
    on left: 204 205 206 207 208 209 210 211, on right: 192 205 206
    207 208 209 210 211
primary_expression (151)
    on left: 212 213 214 215, on right: 204
argument_expression_list (152)
    on left: 216 217, on right: 207 217
constant (153)
    on left: 218 219 220 221, on right: 213
string (154)
    on left: 222, on right: 214
identifier (155)
    on left: 223, on right: 38 40 60 61 64 65 68 88 89 115 139 208
    209 212


State 0

    0 $accept: . translation_unit $end

    AUTO          shift, and go to state 1
    CHAR          shift, and go to state 2
    CONST         shift, and go to state 3
    DOUBLE        shift, and go to state 4
    ENUM          shift, and go to state 5
    EXTERN        shift, and go to state 6
    FLOAT         shift, and go to state 7
    INT           shift, and go to state 8
    LONG          shift, and go to state 9
    REGISTER      shift, and go to state 10
    SHORT         shift, and go to state 11
    SIGNED        shift, and go to state 12
    STATIC        shift, and go to state 13
    STRUCT        shift, and go to state 14
    TYPEDEF       shift, and go to state 15
    UNION         shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    VOID          shift, and go to state 18
    VOLATILE      shift, and go to state 19
    STAR          shift, and go to state 20
    OPAREN        shift, and go to state 21
    TYPEDEF_NAME  shift, and go to state 22
    IDENTIFIER    shift, and go to state 23

    translation_unit           go to state 24
    external_declaration       go to state 25
    function_definition        go to state 26
    declaration                go to state 27
    declaration_specifiers     go to state 28
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    declarator                 go to state 35
    direct_declarator          go to state 36
    pointer                    go to state 37
    identifier                 go to state 38


State 1

   19 storage_class_specifier: AUTO .

    $default  reduce using rule 19 (storage_class_specifier)


State 2

   25 type_specifier: CHAR .

    $default  reduce using rule 25 (type_specifier)


State 3

   36 type_qualifier: CONST .

    $default  reduce using rule 36 (type_qualifier)


State 4

   30 type_specifier: DOUBLE .

    $default  reduce using rule 30 (type_specifier)


State 5

   59 enum_specifier: ENUM . OBRACE enumerator_list CBRACE
   60               | ENUM . identifier OBRACE enumerator_list CBRACE
   61               | ENUM . identifier

    OBRACE      shift, and go to state 39
    IDENTIFIER  shift, and go to state 23

    identifier  go to state 40


State 6

   22 storage_class_specifier: EXTERN .

    $default  reduce using rule 22 (storage_class_specifier)


State 7

   29 type_specifier: FLOAT .

    $default  reduce using rule 29 (type_specifier)


State 8

   27 type_specifier: INT .

    $default  reduce using rule 27 (type_specifier)


State 9

   28 type_specifier: LONG .

    $default  reduce using rule 28 (type_specifier)


State 10

   20 storage_class_specifier: REGISTER .

    $default  reduce using rule 20 (storage_class_specifier)


State 11

   26 type_specifier: SHORT .

    $default  reduce using rule 26 (type_specifier)


State 12

   31 type_specifier: SIGNED .

    $default  reduce using rule 31 (type_specifier)


State 13

   21 storage_class_specifier: STATIC .

    $default  reduce using rule 21 (storage_class_specifier)


State 14

   41 struct_or_union: STRUCT .

    $default  reduce using rule 41 (struct_or_union)


State 15

   23 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 23 (storage_class_specifier)


State 16

   42 struct_or_union: UNION .

    $default  reduce using rule 42 (struct_or_union)


State 17

   32 type_specifier: UNSIGNED .

    $default  reduce using rule 32 (type_specifier)


State 18

   24 type_specifier: VOID .

    $default  reduce using rule 24 (type_specifier)


State 19

   37 type_qualifier: VOLATILE .

    $default  reduce using rule 37 (type_qualifier)


State 20

   75 pointer: STAR .
   76        | STAR . type_qualifier_list
   77        | STAR . pointer
   78        | STAR . type_qualifier_list pointer

    CONST     shift, and go to state 3
    VOLATILE  shift, and go to state 19
    STAR      shift, and go to state 20

    $default  reduce using rule 75 (pointer)

    type_qualifier       go to state 41
    pointer              go to state 42
    type_qualifier_list  go to state 43


State 21

   69 direct_declarator: OPAREN . declarator CPAREN

    STAR        shift, and go to state 20
    OPAREN      shift, and go to state 21
    IDENTIFIER  shift, and go to state 23

    declarator         go to state 44
    direct_declarator  go to state 36
    pointer            go to state 37
    identifier         go to state 38


State 22

   35 type_specifier: TYPEDEF_NAME .

    $default  reduce using rule 35 (type_specifier)


State 23

  223 identifier: IDENTIFIER .

    $default  reduce using rule 223 (identifier)


State 24

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end          shift, and go to state 45
    AUTO          shift, and go to state 1
    CHAR          shift, and go to state 2
    CONST         shift, and go to state 3
    DOUBLE        shift, and go to state 4
    ENUM          shift, and go to state 5
    EXTERN        shift, and go to state 6
    FLOAT         shift, and go to state 7
    INT           shift, and go to state 8
    LONG          shift, and go to state 9
    REGISTER      shift, and go to state 10
    SHORT         shift, and go to state 11
    SIGNED        shift, and go to state 12
    STATIC        shift, and go to state 13
    STRUCT        shift, and go to state 14
    TYPEDEF       shift, and go to state 15
    UNION         shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    VOID          shift, and go to state 18
    VOLATILE      shift, and go to state 19
    STAR          shift, and go to state 20
    OPAREN        shift, and go to state 21
    TYPEDEF_NAME  shift, and go to state 22
    IDENTIFIER    shift, and go to state 23

    external_declaration       go to state 46
    function_definition        go to state 26
    declaration                go to state 27
    declaration_specifiers     go to state 28
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    declarator                 go to state 35
    direct_declarator          go to state 36
    pointer                    go to state 37
    identifier                 go to state 38


State 25

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


State 26

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


State 27

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


State 28

    7 function_definition: declaration_specifiers . declarator compound_statement
    8                    | declaration_specifiers . declarator declaration_list compound_statement
    9 declaration: declaration_specifiers . SEMICOLON
   10            | declaration_specifiers . init_declarator_list SEMICOLON

    SEMICOLON   shift, and go to state 47
    STAR        shift, and go to state 20
    OPAREN      shift, and go to state 21
    IDENTIFIER  shift, and go to state 23

    init_declarator_list  go to state 48
    init_declarator       go to state 49
    declarator            go to state 50
    direct_declarator     go to state 36
    pointer               go to state 37
    identifier            go to state 38


State 29

   13 declaration_specifiers: storage_class_specifier .
   14                       | storage_class_specifier . declaration_specifiers

    AUTO          shift, and go to state 1
    CHAR          shift, and go to state 2
    CONST         shift, and go to state 3
    DOUBLE        shift, and go to state 4
    ENUM          shift, and go to state 5
    EXTERN        shift, and go to state 6
    FLOAT         shift, and go to state 7
    INT           shift, and go to state 8
    LONG          shift, and go to state 9
    REGISTER      shift, and go to state 10
    SHORT         shift, and go to state 11
    SIGNED        shift, and go to state 12
    STATIC        shift, and go to state 13
    STRUCT        shift, and go to state 14
    TYPEDEF       shift, and go to state 15
    UNION         shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    VOID          shift, and go to state 18
    VOLATILE      shift, and go to state 19
    TYPEDEF_NAME  shift, and go to state 22

    $default  reduce using rule 13 (declaration_specifiers)

    declaration_specifiers     go to state 51
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34


State 30

   15 declaration_specifiers: type_specifier .
   16                       | type_specifier . declaration_specifiers

    AUTO          shift, and go to state 1
    CHAR          shift, and go to state 2
    CONST         shift, and go to state 3
    DOUBLE        shift, and go to state 4
    ENUM          shift, and go to state 5
    EXTERN        shift, and go to state 6
    FLOAT         shift, and go to state 7
    INT           shift, and go to state 8
    LONG          shift, and go to state 9
    REGISTER      shift, and go to state 10
    SHORT         shift, and go to state 11
    SIGNED        shift, and go to state 12
    STATIC        shift, and go to state 13
    STRUCT        shift, and go to state 14
    TYPEDEF       shift, and go to state 15
    UNION         shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    VOID          shift, and go to state 18
    VOLATILE      shift, and go to state 19
    TYPEDEF_NAME  shift, and go to state 22

    $default  reduce using rule 15 (declaration_specifiers)

    declaration_specifiers     go to state 52
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34


State 31

   17 declaration_specifiers: type_qualifier .
   18                       | type_qualifier . declaration_specifiers

    AUTO          shift, and go to state 1
    CHAR          shift, and go to state 2
    CONST         shift, and go to state 3
    DOUBLE        shift, and go to state 4
    ENUM          shift, and go to state 5
    EXTERN        shift, and go to state 6
    FLOAT         shift, and go to state 7
    INT           shift, and go to state 8
    LONG          shift, and go to state 9
    REGISTER      shift, and go to state 10
    SHORT         shift, and go to state 11
    SIGNED        shift, and go to state 12
    STATIC        shift, and go to state 13
    STRUCT        shift, and go to state 14
    TYPEDEF       shift, and go to state 15
    UNION         shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    VOID          shift, and go to state 18
    VOLATILE      shift, and go to state 19
    TYPEDEF_NAME  shift, and go to state 22

    $default  reduce using rule 17 (declaration_specifiers)

    declaration_specifiers     go to state 53
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34


State 32

   33 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 33 (type_specifier)


State 33

   38 struct_or_union_specifier: struct_or_union . identifier OBRACE struct_declaration_list CBRACE
   39                          | struct_or_union . OBRACE struct_declaration_list CBRACE
   40                          | struct_or_union . identifier

    OBRACE      shift, and go to state 54
    IDENTIFIER  shift, and go to state 23

    identifier  go to state 55


State 34

   34 type_specifier: enum_specifier .

    $default  reduce using rule 34 (type_specifier)


State 35

    5 function_definition: declarator . compound_statement
    6                    | declarator . declaration_list compound_statement

    AUTO          shift, and go to state 1
    CHAR          shift, and go to state 2
    CONST         shift, and go to state 3
    DOUBLE        shift, and go to state 4
    ENUM          shift, and go to state 5
    EXTERN        shift, and go to state 6
    FLOAT         shift, and go to state 7
    INT           shift, and go to state 8
    LONG          shift, and go to state 9
    REGISTER      shift, and go to state 10
    SHORT         shift, and go to state 11
    SIGNED        shift, and go to state 12
    STATIC        shift, and go to state 13
    STRUCT        shift, and go to state 14
    TYPEDEF       shift, and go to state 15
    UNION         shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    VOID          shift, and go to state 18
    VOLATILE      shift, and go to state 19
    OBRACE        shift, and go to state 56
    TYPEDEF_NAME  shift, and go to state 22

    declaration                go to state 57
    declaration_list           go to state 58
    declaration_specifiers     go to state 59
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    compound_statement         go to state 60


State 36

   66 declarator: direct_declarator .
   70 direct_declarator: direct_declarator . OBRACKET CBRACKET
   71                  | direct_declarator . OBRACKET constant_expression CBRACKET
   72                  | direct_declarator . OPAREN CPAREN
   73                  | direct_declarator . OPAREN parameter_type_list CPAREN
   74                  | direct_declarator . OPAREN identifier_list CPAREN

    OBRACKET  shift, and go to state 61
    OPAREN    shift, and go to state 62

    $default  reduce using rule 66 (declarator)


State 37

   67 declarator: pointer . direct_declarator

    OPAREN      shift, and go to state 21
    IDENTIFIER  shift, and go to state 23

    direct_declarator  go to state 63
    identifier         go to state 38


State 38

   68 direct_declarator: identifier .

    $default  reduce using rule 68 (direct_declarator)


State 39

   59 enum_specifier: ENUM OBRACE . enumerator_list CBRACE

    IDENTIFIER  shift, and go to state 23

    enumerator_list  go to state 64
    enumerator       go to state 65
    identifier       go to state 66


State 40

   60 enum_specifier: ENUM identifier . OBRACE enumerator_list CBRACE
   61               | ENUM identifier .

    OBRACE  shift, and go to state 67

    $default  reduce using rule 61 (enum_specifier)


State 41

   79 type_qualifier_list: type_qualifier .

    $default  reduce using rule 79 (type_qualifier_list)


State 42

   77 pointer: STAR pointer .

    $default  reduce using rule 77 (pointer)


State 43

   76 pointer: STAR type_qualifier_list .
   78        | STAR type_qualifier_list . pointer
   80 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST     shift, and go to state 3
    VOLATILE  shift, and go to state 19
    STAR      shift, and go to state 20

    $default  reduce using rule 76 (pointer)

    type_qualifier  go to state 68
    pointer         go to state 69


State 44

   69 direct_declarator: OPAREN declarator . CPAREN

    CPAREN  shift, and go to state 70


State 45

    0 $accept: translation_unit $end .

    $default  accept


State 46

    2 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 47

    9 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 9 (declaration)


State 48

   10 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   46 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA      shift, and go to state 71
    SEMICOLON  shift, and go to state 72


State 49

   45 init_declarator_list: init_declarator .

    $default  reduce using rule 45 (init_declarator_list)


State 50

    7 function_definition: declaration_specifiers declarator . compound_statement
    8                    | declaration_specifiers declarator . declaration_list compound_statement
   47 init_declarator: declarator .
   48                | declarator . ASSIGN initializer

    AUTO          shift, and go to state 1
    CHAR          shift, and go to state 2
    CONST         shift, and go to state 3
    DOUBLE        shift, and go to state 4
    ENUM          shift, and go to state 5
    EXTERN        shift, and go to state 6
    FLOAT         shift, and go to state 7
    INT           shift, and go to state 8
    LONG          shift, and go to state 9
    REGISTER      shift, and go to state 10
    SHORT         shift, and go to state 11
    SIGNED        shift, and go to state 12
    STATIC        shift, and go to state 13
    STRUCT        shift, and go to state 14
    TYPEDEF       shift, and go to state 15
    UNION         shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    VOID          shift, and go to state 18
    VOLATILE      shift, and go to state 19
    ASSIGN        shift, and go to state 73
    OBRACE        shift, and go to state 56
    TYPEDEF_NAME  shift, and go to state 22

    $default  reduce using rule 47 (init_declarator)

    declaration                go to state 57
    declaration_list           go to state 74
    declaration_specifiers     go to state 59
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    compound_statement         go to state 75


State 51

   14 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 14 (declaration_specifiers)


State 52

   16 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 16 (declaration_specifiers)


State 53

   18 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 18 (declaration_specifiers)


State 54

   39 struct_or_union_specifier: struct_or_union OBRACE . struct_declaration_list CBRACE
